Don't hang if the user has configured a non-existing terminal app

BUG: 130436